# MCCube

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: conf.py  fromscratch.md  fromscratch.rst  index.rst  quickstart.md  requirements-docs.txt
docs/_static/: custom.css  references.bib
docs/api/: _custom_types.md  _formulae.md  _metrics.md  _path.md  _regions.md  _solvers.md  _term.md  _utils.md  index.md  index.rst  mccube.cubature.rst  mccube.custom_types.rst  mccube.diffrax.rst  mccube.formulae.rst  mccube.inference.rst  mccube.kernels.rst  mccube.regions.rst  mccube.utils.rst
docs/api/_kernels/: base.md  random.md  stratified.md  tree.md
mccube/: __init__.py  _custom_types.py  _diffrax.py  _formulae.py  _inference.py  _metrics.py  _path.py  _regions.py  _solvers.py  _term.py  _utils.py  cubature.py  formulae.py  inference.py  metrics.py  regions.py  utils.py
mccube/_kernels/: __init__.py  base.py  diffusions.py  random.py  stratified.py  tree.py
mccube/components/: __init__.py  base.py
mccube/components/propagators/: __init__.py  base.py  diffusions.py
mccube/components/recombinators/: __init__.py  base.py  random.py
mccube/diffrax/: solvers.py
mccube/extensions/: __init__.py  solvers.py  visualizers.py
test/: conftest.py  helpers.py  test_metrics.py  test_term.py
tests/: conftest.py  requirements-test.txt  test_formulae.py  test_kernels.py  test_metrics.py  test_path.py  test_regions.py  test_solvers.py  test_term.py  test_utils.py
