[project]
name = "mccube"
version = "0.0.3"
description = "Markov chain cubature via JAX."
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "The MCCube team", email = "T.Coxon2@lboro.ac.uk"}]
keywords = [
    "sampling",
    "probability",
    "cubature",
    "stochastic differential equations",
    "mcmc",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.12"
dependencies = [
    "diffrax>=0.5.0",
    "equinox>=0.11.2",
    "jax>=0.4.23",
    "jaxtyping>=0.2.25",
    "scikit-learn>=1.3.2"
]

[project.urls]
homepage = "https://github.com/tttc3/mccube"
documentation = "https://mccube.readthedocs.io"
repository = "https://github.com/tttc3/mccube"

[project.optional-dependencies]
test = [
    "beartype",
    "pytest",
    "jaxlib"
]

dev = [
    "mccube[test]",
    "pre-commit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["mccube/*"]

[tool.pytest.ini_options]
addopts = "--jaxtyping-packages=mccube,beartype.beartype(conf=beartype.BeartypeConf(strategy=beartype.BeartypeStrategy.On))"

[tool.jupytext]
formats = "ipynb, md"

[tool.ruff]
extend-include = ["*.ipynb"]
fixable = ["I001", "F401"]
ignore = ["F722"]

[tool.ruff.isort]
combine-as-imports = true
order-by-type = false

[tool.pyright]
typeCheckingMode = "standard"
include = ["mccube", "tests"]
